--- a/report/7reference.tex
+++ b/report/7reference.tex
@@ -3,24 +3,31 @@
 \section*{Reference}
 \small
 
-[1] Yang, Yi, and Jacob Eisenstein. "Overcoming Language Variation in Sentiment Analysis with Social Attention." arXiv preprint  arXiv:1511.06052 (2016).
+[1] Yang, Yi, and Jacob Eisenstein. ``Overcoming Language Variation in Sentiment Analysis with Social Attention." arXiv preprint  arXiv:1511.06052 (2016).
 
-[2] Perozzi, Bryan, Rami Al-Rfou, and Steven Skiena. "Deepwalk: Online learning of social representations." Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2014.
+[2] Perozzi, Bryan, Rami Al-Rfou, and Steven Skiena. ``Deepwalk: Online learning of social representations." Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2014.
 
-[3] Tang, Jian, et al. "Line: Large-scale information network embedding." Proceedings of the 24th International Conference on World Wide Web. ACM, 2015.
+[3] Tang, Jian, et al. ``Line: Large-scale information network embedding." Proceedings of the 24th International Conference on World Wide Web. ACM, 2015.
 
-[4] Grover, Aditya, and Jure Leskovec. "node2vec: Scalable feature learning for networks." Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. ACM, 2016.
+[4] Grover, Aditya, and Jure Leskovec. ``node2vec: Scalable feature learning for networks." Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. ACM, 2016.
 
-[5] Tan, Chenhao, et al. "User-level sentiment analysis incorporating social networks." Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2011.
+[5] Tan, Chenhao, et al. ``User-level sentiment analysis incorporating social networks." Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2011.
 
-[6] Yang, Yi, and Ming-Wei Chang. "S-mart: Novel tree-based structured learning algorithms applied to tweet entity linking." arXiv preprint arXiv:1609.08075 (2016).
+[6] Yang, Yi, and Ming-Wei Chang. ``S-mart: Novel tree-based structured learning algorithms applied to tweet entity linking." arXiv preprint arXiv:1609.08075 (2016).
 
-[7] Yang, Yi, Ming-Wei Chang, and Jacob Eisenstein. "Toward socially-infused information extraction: Embedding authors, mentions, and entities." arXiv preprint arXiv:1609.08084 (2016).
+[7] Yang, Yi, Ming-Wei Chang, and Jacob Eisenstein. ``Toward socially-infused information extraction: Embedding authors, mentions, and entities." arXiv preprint arXiv:1609.08084 (2016).
 
-[8] Pang, Bo, and Lillian Lee. "Opinion mining and sentiment analysis." Foundations and Trends® in Information Retrieval 2.1–2 (2008): 1-135.
+[8] Pang, Bo, and Lillian Lee. ``Opinion mining and sentiment analysis." Foundations and Trends® in Information Retrieval 2.1–2 (2008): 1-135.
 
 [9] Kim, Yoon. "Convolutional neural networks for sentence classification." arXiv preprint arXiv:1408.5882 (2014).
 
-[10] Dos Santos, Cícero Nogueira, and Maira Gatti. "Deep Convolutional Neural Networks for Sentiment Analysis of Short Texts." COLING. 2014.
+[10] Dos Santos, Cícero Nogueira, and Maira Gatti. ``Deep Convolutional Neural Networks for Sentiment Analysis of Short Texts." COLING. 2014.
 
-[11] Severyn, Aliaksei, and Alessandro Moschitti. "Twitter sentiment analysis with deep convolutional neural networks." Proceedings of the 38th International ACM SIGIR Conference on Research and Development in Information Retrieval. ACM, 2015.
+[11] Severyn, Aliaksei, and Alessandro Moschitti. ``Twitter sentiment analysis with deep convolutional neural networks." Proceedings of the 38th International ACM SIGIR Conference on Research and Development in Information Retrieval. ACM, 2015.
+
+[12] Rosenthal, Sara, and Kathleen McKeown. ``Age prediction in blogs: A study of style, content, and online behavior in pre-and post-social media generations." Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies-Volume 1. Association for Computational Linguistics, 2011.
+
+[13] Astudillo, Ramón Fernandez, et al. ``Learning Word Representations from Scarce and Noisy Data with Embedding Subspaces." ACL (1). 2015.
+
+[14] Ling, Wang, et al. ``Two/Too Simple Adaptations of Word2Vec for Syntax Problems." HLT-NAACL. 2015.
+APA	
