--- a/report/report.tex
+++ b/report/report.tex
@@ -187,7 +187,13 @@ Stanford, CA 94305 \\
 \maketitle
 
 \begin{abstract}
-Some abstract
+One challenge for sentiment analysis as well as many other natural language processing task 
+is the language variation. In this project, based on the intuition of language homophily, we aim
+to solve this problem by combing social network information. We propose a new model that
+measure the interaction between author embedding and sentence words' embeddings. This model
+is based on the current state-of-the-art methodology that does not consider social network information. 
+The authors' embeddings are pretrained with three different yet most popular network node embedding methods, 
+and their performances are compared.
 \end{abstract}
 
 
