--- a/report/3problem.tex
+++ b/report/3problem.tex
@@ -10,8 +10,8 @@ The data consists of a collection of tweets as well as some network information 
 The corpus contains a collection of samples (tweets). 
 For each data sample, we have one tweet ID, one user ID, a sentiment label (positive, neutral, negative), and the tweet content itself. For example, the following are two examples of our data samples.
 \begin{verbatim}
-261140278944088066	17572408	negative	@USER may i have an industrial revolution ...
-237571817550786563	727519172	neutral	@USER i told you shane would get his 5th-star ...
+261140278944088066	17572408	negative	@USER may i have an ...
+237571817550786563	727519172	neutral	@USER i told you shane ...
 \end{verbatim}
 
 The size of the corpus is the following:
